--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,8 @@ main:
   rules:
     - !reference [.etl-template, rules]
 
-### Example stage 1: add another ETL with name "collections"
-collections:
+### Stage 1: add another ETL with name "cbs_papers"
+cbs_papers:
   stage: run-etls
   interruptible: true
   allow_failure: false
@@ -59,12 +59,12 @@ collections:
     - !reference [.etl-template, run-etl]
   rules:
     # Make sure you remove this next line if you want to use this stage:
-    - when: never
+    # - when: never
     - !reference [.etl-template, rules]
 
 
 ### Example stage 2: create Knowledge Graph:
-create-knowledge-graph:
+cbs_codelib
   stage: create-knowledge-graph
   interruptible: true
   script:
@@ -72,7 +72,7 @@ create-knowledge-graph:
     - !reference [.etl-template, run-etl]
   rules:
     # Make sure you remove this next line if you want to use this stage:
-    - when: never
+    # - when: never
     - if: $TASK == $CI_JOB_NAME
     - if: $CI_PIPELINE_SOURCE == "schedule"
 
