--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,9 +58,17 @@ cbs_papers:
   script:
     - !reference [.etl-template, install]
     - !reference [.etl-template, run-etl]
+    if [ -z "$HEAD" ]; then 
+        npx etl --verbose --timeout "$TIMEOUT" ./lib/cbs_codelib.js  --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
+        npx etl --verbose --timeout "$TIMEOUT" ./lib/liss_codelib.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
+        npx etl --verbose --timeout "$TIMEOUT" ./lib/cbs_projects.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
+      else
+        npx etl --verbose --head "$HEAD" --timeout "$TIMEOUT" ./lib/$CI_JOB_NAME.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
+      fi
+
   rules:
     # Make sure you remove this next line if you want to use this stage:
-    - when: never
+    - when: always
     - !reference [.etl-template, rules]
 
 
@@ -73,7 +81,7 @@ cbs_codelib:
     - !reference [.etl-template, run-etl]
   rules:
     # Make sure you remove this next line if you want to use this stage:
-    # - when: never
+    - when: never
     - if: $TASK == $CI_JOB_NAME
     - if: $CI_PIPELINE_SOURCE == "schedule"
 
