--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ preflight:
   rules:
     - !reference [.etl-template, rules-preflight]
 
-### Stage 1: run ETL "main"
+### Stage 1: run example ETL "main"
 main:
   stage: run-etls
   interruptible: true
@@ -63,7 +63,7 @@ cbs_papers:
         npx etl --verbose --timeout "$TIMEOUT" ./lib/liss_codelib.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
         npx etl --verbose --timeout "$TIMEOUT" ./lib/cbs_projects.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
       else
-        npx etl --verbose --head "$HEAD" --timeout "$TIMEOUT" ./lib/$CI_JOB_NAME.js --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
+        npx etl --verbose --timeout "$TIMEOUT" ./lib/cbs_codelib.js  --log-dir logs --data-dir /data/$CI_PROJECT_PATH_SLUG/$CI_JOB_NAME/$CI_COMMIT_REF_NAME;
       fi
 
   rules:
