--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "author": "Triply <info@triply.cc>",
   "type": "module",
   "dependencies": {
-    "@triplyetl/etl": "^4.3.2"
+    "@triplyetl/etl": "^4.3.2",
+    "jsonpath-plus": "^10.0.7"
   },
   "description": "Triply ETL for odissei",
   "lint-staged": {
@@ -11,7 +12,7 @@
       "prettier --write --ignore-unknown"
     ]
   },
-  "main": "lib/main.js",
+  "main": "lib/cbs_projects.js",
   "private": true,
   "license": "UNLICENSED",
   "contributors": [
