--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ liss_codelib:
     - !reference [.etl-template, rules]
 
 ### Example stage 2: create Knowledge Graph:
-create-knowledge-graph:
+reuse_existing_graphs:
   stage: create-knowledge-graph
   interruptible: true
   script:
@@ -93,7 +93,6 @@ create-knowledge-graph:
     - !reference [.etl-template, run-etl]
   rules:
     # Make sure you remove this next line if you want to use this stage:
-    - when: never
     - if: $TASK == $CI_JOB_NAME
     - if: $CI_PIPELINE_SOURCE == "schedule"
 
