--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "author": "Triply <info@triply.cc>",
   "type": "module",
   "dependencies": {
-    "@triplyetl/etl": "^4.9.3",
-    "jsonpath-plus": "^10.0.7"
+    "@triplyetl/etl": "^4.9.5"
   },
   "description": "Triply ETL for odissei",
   "lint-staged": {
