--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,9 @@ vu_dataverseETL:
     !reference [.etl-template, artifacts]
   rules:
     - if: $DATAVERSE == "TRUE"
-    - !reference [.etl-template, rules]
+    - if: $TASK == "run-etls"
+    - if: $TASK == $CI_JOB_NAME
+    - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
     - !reference [.etl-template, install]
     - !reference [.etl-template, run-etl]
