more node version cleanup

--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "author": "Triply <info@triply.cc>",
   "type": "module",
   "dependencies": {
-    "@triplyetl/etl": "^4.10.1",
-    "husky": "^9.1.7"
+    "@triplyetl/etl": "^4.10.1"
   },
-  "description": "Triply ETL for odissei",
+  "description": "Triply ETL for ODISSEI Knowledge Graph prototype",
   "lint-staged": {
     "*.ts?(x)": [
       "npm run util:lint:fix",
       "prettier --write --ignore-unknown"
     ]
   },
-  "main": "lib/cbs_projects.js",
+  "main": "lib/dataverse.js",
   "private": true,
-  "license": "CC-BY-SA",
+  "license": "Apache 2.0",
   "contributors": [
     {
       "name": "jacco.van.ossenbruggen",
@@ -28,8 +27,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch --preserveWatchOutput",
-    "util:lint": "cross-env ESLINT_STRICT=true eslint --ext .tsx --ext .ts ./src",
-    "util:lint:fix": "cross-env ESLINT_STRICT=true eslint --fix --ext .tsx --ext .ts ./src",
+    "util:lint": "cross-env ESLINT_STRICT=true eslint ./src",
+    "util:lint:fix": "cross-env ESLINT_STRICT=true eslint --fix ./src",
     "util:validateTs": "tsc --noEmit",
     "util:validateTs:watch": "tsc --noEmit --watch --preserveWatchOutput"
   },
